--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
 
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -52,7 +54,10 @@
     <div id="fb-root"></div>
 
     <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
+    <div id="fb-customer-chat" class="fb-customerchat"
+         size="small"
+    >
+
     </div>
 
     <script>
