--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,11 @@
     -->
     <title>React App</title>
     <style>
+.fb-customerchat {
+  color: red;
+  background-color:red;
+  width: 20px;
+}
 
     </style>
   </head>
@@ -55,7 +60,7 @@
 
     <!-- Your Chat Plugin code -->
     <div id="fb-customer-chat" class="fb-customerchat"
-         size="small"
+
     >
 
     </div>
