--- a/public/index.html
+++ b/public/index.html
@@ -32,14 +32,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <style>
-.fb-customerchat {
-  color: red;
-  background-color:red;
-  width: 20px;
-}
 
-    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -60,8 +53,7 @@
 
     <!-- Your Chat Plugin code -->
     <div id="fb-customer-chat" class="fb-customerchat"
-
-    >
+         theme_color="#8753F0">
 
     </div>
 
