--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
     <style>
       .fb-customerchat {
-        width: 20px;
+
       }
     </style>
   </head>
@@ -31,7 +31,8 @@
     <div id="fb-root"></div>
 
     <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
+    <div style="width:20px;" id="fb-customer-chat" class="fb-customerchat">
+
     </div>
 
     <script>
