--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <div id="fb-root"></div>
 
     <!-- Your Chat Plugin code -->
-    <div style="width:20px;" id="fb-customer-chat" class="fb-customerchat">
+    <div id="fb-customer-chat" class="fb-customerchat" size="small" theme_color="#8753F0">
 
     </div>
 
