--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,10 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!-- Messenger Chat Plugin Code -->
-    <div id="fb-root"></div>
+    <div id="fb-root" size="small" theme_color="#8753F0"></div>
 
     <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat" size="small" theme_color="#8753F0">
+    <div id="fb-customer-chat" class="fb-customerchat" >
 
     </div>
 
