--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,7 @@
     <div id="fb-root" ></div>
 
     <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat" >
-asdkfjkj
-    </div>
+
 
     <script>
       var chatbox = document.getElementById('fb-customer-chat');
@@ -58,6 +56,9 @@ asdkfjkj
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     </script>
+    <div id="fb-customer-chat" class="fb-customerchat"  theme_color="#8753F0">
+      <h1>jkjdf</h1>
+    </div>
   </body>
 
 </html>
