--- a/public/index.html
+++ b/public/index.html
@@ -18,20 +18,16 @@
     <title>React App</title>
 
 
-    <style>
-      .fb-customerchat {
-
-      }
-    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!-- Messenger Chat Plugin Code -->
-    <div id="fb-root" ></div>
+    <div id="fb-root"></div>
 
     <!-- Your Chat Plugin code -->
-
+    <div id="fb-customer-chat" class="fb-customerchat" page_id="331581003847973" theme_color="#8753F0">
+    </div>
 
     <script>
       var chatbox = document.getElementById('fb-customer-chat');
@@ -56,9 +52,6 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     </script>
-    <div id="fb-customer-chat" class="fb-customerchat"  theme_color="#8753F0">
-      <h1>jkjdf</h1>
-    </div>
   </body>
 
 </html>
