--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <div id="fb-root"></div>
 
     <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat" page_id="331581003847973" theme_color="#8753F0">
+    <div id="fb-customer-chat" class="fb-customerchat" page_id="331581003847973" theme_color="#8753F0" size="small">
     </div>
 
     <script>
