--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
       var chatbox = document.getElementById('fb-customer-chat');
       chatbox.setAttribute("page_id", "331581003847973");
       chatbox.setAttribute("attribution", "biz_inbox");
+      chatbox.setAttribute("size", "small");
     </script>
 
     <!-- Your SDK code -->
