--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,13 @@
     <div id="fb-root"></div>
 
     <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat" page_id="331581003847973" theme_color="#8753F0" size="small">
+    <div id="fb-customer-chat" class="fb-customerchat" messenger_app_id="613554456622921"  page_id="331581003847973" theme_color="#8753F0" minimized >
     </div>
 
     <script>
       var chatbox = document.getElementById('fb-customer-chat');
       chatbox.setAttribute("page_id", "331581003847973");
       chatbox.setAttribute("attribution", "biz_inbox");
-      chatbox.setAttribute("size", "small");
     </script>
 
     <!-- Your SDK code -->
