--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
     <div id="fb-root"></div>
 
     <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat" messenger_app_id="613554456622921"  page_id="331581003847973" theme_color="#8753F0" minimized >
+    <div id="fb-customer-chat" class="fb-customerchat" messenger_app_id="613554456622921"
+         page_id="331581003847973" theme_color="#8753F0" minimized size="small">
     </div>
 
     <script>
