--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <!-- Your Chat Plugin code -->
     <div id="fb-customer-chat" class="fb-customerchat" messenger_app_id="613554456622921"
-         page_id="331581003847973" theme_color="#8753F0" minimized="true">
+         page_id="331581003847973" theme_color="#8753F0" minimized="true" style="width: 20px;">
     </div>
 
     <script>
