--- a/public/index.html
+++ b/public/index.html
@@ -17,19 +17,26 @@
     />
     <title>React App</title>
 
+  <style>
+    .fmessengerBtn {
+      width: 10px;
+    }
 
+  </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div class="fmessengerBtn">
+
     <!-- Messenger Chat Plugin Code -->
     <div id="fb-root"></div>
 
     <!-- Your Chat Plugin code -->
     <div id="fb-customer-chat" class="fb-customerchat" messenger_app_id="613554456622921"
-         page_id="331581003847973" theme_color="#8753F0" minimized="true" style="width: 20px;">
+         page_id="331581003847973" theme_color="#8753F0" minimized="true">
     </div>
-
+    </div>
     <script>
       var chatbox = document.getElementById('fb-customer-chat');
       chatbox.setAttribute("page_id", "331581003847973");
